# MerlinCCU

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Keyboard.xlsx  MerlinCCU.code-workspace  MerlinCCU.cpp  README.md  bitmap_font.h  config_manager.cpp  config_manager.h  console_controller.cpp  console_controller.h  console_model.cpp  console_model.h  debug_logging.h  display.cpp  display.h  el320_raster.pio  el320_sync.pio  el320_vidclk.pio  font_5x7.h  fonts.h  framebuffer.cpp  framebuffer.h  home_assistant_credentials.example.h  home_assistant_manager.cpp  home_assistant_manager.h  input.cpp  input.h  keypad_matrix_config.example.h  lwipopts.h  mqtt_credentials.example.h  mqtt_manager.cpp  mqtt_manager.h  panel_config.h  screen_banners.cpp  (+26 more)
